--- a/external/upstream/libxc/CMakeLists.txt
+++ b/external/upstream/libxc/CMakeLists.txt
@@ -13,12 +13,12 @@ else()
     message(STATUS "Suitable Libxc could not be located, ${Magenta}Building Libxc${ColourReset} instead.")
     ExternalProject_Add(libxc_external
         # Default: use a stable release tarball of libxc. To use the
-        # development version of libxc, instead, comment the URL line,
-        # and uncomment the GIT lines.
+        # development version of libxc, instead, comment the first URL line,
+        # and uncomment the second URL line.
         #URL http://www.tddft.org/programs/octopus/down.php?file=libxc/4.3.4/libxc-4.3.4.tar.gz
-        URL https://gitlab.com/libxc/libxc/-/archive/4.3.4/libxc-4.3.4.tar.gz
-        #GIT_REPOSITORY https://gitlab.com/libxc/libxc.git
-        #GIT_TAG 4.3.4
+        #URL https://gitlab.com/libxc/libxc/-/archive/4.3.4/libxc-4.3.4.tar.gz
+        URL https://gitlab.com/libxc/libxc/-/archive/master/libxc-master.tar.gz
+        UPDATE_COMMAND ""
         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}
                    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
                    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
