--- a/external/upstream/libxc/CMakeLists.txt
+++ b/external/upstream/libxc/CMakeLists.txt
@@ -15,10 +15,9 @@ else()
         # Default: use a stable release tarball of libxc. To use the
         # development version of libxc, instead, comment the first URL line,
         # and uncomment the second URL line.
-        #URL http://www.tddft.org/programs/octopus/down.php?file=libxc/4.3.4/libxc-4.3.4.tar.gz
-        #URL https://gitlab.com/libxc/libxc/-/archive/4.3.4/libxc-4.3.4.tar.gz
-        URL https://gitlab.com/libxc/libxc/-/archive/master/libxc-master.tar.gz
-        UPDATE_COMMAND ""
+        URL https://gitlab.com/libxc/libxc/-/archive/5.0.0/libxc-5.0.0.tar.gz
+        #URL https://gitlab.com/libxc/libxc/-/archive/master/libxc-master.tar.gz
+        #UPDATE_COMMAND ""
         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}
                    -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
                    -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
